--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -3,7 +3,7 @@ entries:
   azurelabs:
   - apiVersion: v2
     appVersion: 1.16.0
-    created: "2023-09-17T12:19:43.8056642+02:00"
+    created: "2023-09-17T12:22:56.7902785+02:00"
     dependencies:
     - name: antivirus-app
       repository: ""
@@ -24,7 +24,7 @@ entries:
       repository: https://test-organisation-bridzinppp.github.io/helm/
       version: 0.1.0
     description: A Helm chart for Kubernetes
-    digest: 6b4a7464109a6745d6089ed890af8a0596296c5a6199e75301c087f6abd33d85
+    digest: 64093407253cf2af2eb1c4b6c66ea31a108cab8fb7bb8352eb48281abb57dbb3
     name: azurelabs
     type: application
     urls:
@@ -33,9 +33,9 @@ entries:
   clamav:
   - apiVersion: v2
     appVersion: 0.0.1
-    created: "2023-09-17T12:19:43.8066644+02:00"
+    created: "2023-09-17T12:22:56.7919151+02:00"
     description: A Helm chart for Kubernetes - clamav
-    digest: d7d2669aa7a72be2f179086511d7904a2ddbb46b9f0a2bf8f7b36a133265aca9
+    digest: 4b6004313f74dc4663ba630a6c488a4d6e6974db61388c7ae3e1933cf966364a
     name: clamav
     type: application
     urls:
@@ -44,12 +44,23 @@ entries:
   rabbitmq:
   - apiVersion: v2
     appVersion: 0.0.1
-    created: "2023-09-17T12:19:43.8076638+02:00"
+    created: "2023-09-17T12:22:56.7933091+02:00"
     description: A Helm chart for Kubernetes - rabbitmq
-    digest: c26961b851176401add0bd978590f41eca3966da7b5f009547b9f0d92e0088cd
+    digest: acad7460897a139db61f4c014d3da9dd8321e1d7b97bf3d11650c3b2b003519b
     name: rabbitmq
     type: application
     urls:
     - rabbitmq-0.0.1.tgz
     version: 0.0.1
-generated: "2023-09-17T12:19:43.8019847+02:00"
+  resource_templates:
+  - apiVersion: v2
+    appVersion: 0.0.1
+    created: "2023-09-17T12:22:56.7951216+02:00"
+    description: A Helm chart for Kubernetes
+    digest: 96a5cac050541e7c00d5867568b455d7f6d1132b9f24b2527fb1339e105867e9
+    name: resource_templates
+    type: application
+    urls:
+    - resource_templates-0.0.1.tgz
+    version: 0.0.1
+generated: "2023-09-17T12:22:56.7871968+02:00"
